# auto_redshift

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  result
examples/: config.toml
src/: .main.rs.pending-snap  config.rs  main.rs
