[package]
name = "auto_redshift"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["derive-new", "anyhow", "serde", "tokio"]

#? still not sure if these do anything
[lints.clippy]
get_first = "allow"
len_zero = "allow"

[dependencies]
anyhow = "^1.0.91"
chrono = "0.4.38"
clap = { version = "^4.5.20", features = ["derive"] }
config = "0.14.1"
derive-new = "^0.7.0"
serde = "1.0.213"
v_utils = { version = "1.7.8", features = ["io", "macros"] }
