[package]
name = "auto_redshift"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["derive-new", "anyhow", "serde", "tokio"]

#? still not sure if these do anything
[lints.clippy]
get_first = "allow"
len_zero = "allow"

[dependencies]
anyhow = "^1.0.100"
chrono = "0.4.42"
clap = { version = "^4.5.53", features = ["derive"] }
config = "0.15.19"
derive-new = "^0.7.0"
serde = "1.0.228"
v_utils = { version = "2.15.11", features = ["io", "macros"] }

[dev-dependencies]
insta = "1.45"
