[package]
name = "auto_redshift"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["derive-new", "serde", "tokio"]

#? still not sure if these do anything
[lints.clippy]
get_first = "allow"
len_zero = "allow"

[dependencies]
clap = { version = "^4.5.54", features = ["derive"] }
color-eyre = "0.6"
config = "0.15.19"
derive-new = "^0.7.0"
jiff = "0.2"
serde = "1.0.228"
tracing = "0.1"
v_utils = { version = "2.15.16", features = ["io", "macros", "tracing", "xdg"] }

[dev-dependencies]
insta = "1.46"
